// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkChartGridLines X should render band scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x1="16.666666666666668"
        x2="16.666666666666668"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="50"
        x2="50"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="83.33333333333334"
        x2="83.33333333333334"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="116.66666666666667"
        x2="116.66666666666667"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="150"
        x2="150"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="183.33333333333334"
        x2="183.33333333333334"
        y2="120"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines X should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x1="50"
        x2="50"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="116.66666666666667"
        x2="116.66666666666667"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="183.33333333333334"
        x2="183.33333333333334"
        y2="120"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines X should render band scale with "tickEvery" attribute 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x1="16.666666666666668"
        x2="16.666666666666668"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="83.33333333333334"
        x2="83.33333333333334"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="150"
        x2="150"
        y2="120"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines X should render linear scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x1="50"
        x2="50"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="100"
        x2="100"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="150"
        x2="150"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="200"
        x2="200"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="250"
        x2="250"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="300"
        x2="300"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="350"
        x2="350"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="400"
        x2="400"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="450"
        x2="450"
        y2="120"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines X should render linear scale with "numTicks" attribute 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x1="200"
        x2="200"
        y2="120"
      />
      <line
        class="bpk-chart__grid-line"
        x1="400"
        x2="400"
        y2="120"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines Y should render band scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="16.666666666666668"
        y2="16.666666666666668"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="50"
        y2="50"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="83.33333333333334"
        y2="83.33333333333334"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="116.66666666666667"
        y2="116.66666666666667"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="150"
        y2="150"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="183.33333333333334"
        y2="183.33333333333334"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines Y should render band scale with "tickEvery" and "tickOffset" attributes 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="50"
        y2="50"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="116.66666666666667"
        y2="116.66666666666667"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="183.33333333333334"
        y2="183.33333333333334"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines Y should render band scale with "tickEvery" attribute 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="16.666666666666668"
        y2="16.666666666666668"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="83.33333333333334"
        y2="83.33333333333334"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="150"
        y2="150"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines Y should render linear scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="50"
        y2="50"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="100"
        y2="100"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="150"
        y2="150"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="200"
        y2="200"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="250"
        y2="250"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="300"
        y2="300"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="350"
        y2="350"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="400"
        y2="400"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="450"
        y2="450"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`BpkChartGridLines Y should render linear scale with "numTicks" attribute 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="bpk-chart__grid-lines"
    >
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="200"
        y2="200"
      />
      <line
        class="bpk-chart__grid-line"
        x2="120"
        y1="400"
        y2="400"
      />
    </g>
  </svg>
</DocumentFragment>
`;
